Update phân quyền